# Internal-react-generativeUI-dnd

./: .gitignore  README.md  pnpm-lock.yaml
app/: MasterLayout.tsx  app.css
app/Dashboard/: AIChatComponent.tsx  ComponentChat.tsx  ComponentLibrary.tsx  ComponentRegistry.tsx  ComponentWrapper.tsx  Dashboard.tsx  PROPS_FLOW.md  README.md
app/Dashboard/components/: PerformanceGauge.tsx  README.md  components.css
app/plugins/: DEVELOPMENT.md  PLUGIN_ARCHITECTURE.md  index.ts  init.ts  tsconfig.json
app/plugins/MasterLayoutPlugin/: README.md  index.ts
app/plugins/MasterLayoutPlugin/components/: AIChatComponent.tsx  ComponentWrapper.tsx  MasterLayout.tsx
app/plugins/MasterLayoutPlugin/hooks/: useChatManagement.ts  useLayoutState.ts
app/plugins/MasterLayoutPlugin/interfaces/: index.ts
app/plugins/MasterLayoutPlugin/utils/: componentUtils.ts  layout.ts  storage.ts
app/utils/: ComponentFactory.tsx  localStorageUtils.ts
backend/: README.md  env.example  pyproject.toml  run.py  setup.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  security.py
backend/app/utils/: logger.py
backend/fastapi-server/: .gitignore  README.md  create_db.py  env.example  pyproject.toml
backend/fastapi-server/src/fastapi_server/: __init__.py  chat_agent.py  config.py  database.py  main.py  models.py  schemas.py
backend/fastapi-server/src/fastapi_server/ai/: __init__.py  crew.py
backend/fastapi-server/src/fastapi_server/ai/config/: agents.yaml  tasks.yaml
backend/fastapi-server/src/fastapi_server/repositories/: __init__.py  base_repository.py  chat_repository.py  component_repository.py
backend/fastapi-server/src/fastapi_server/services/: __init__.py  chat_service.py  component_service.py
backend/fastapi-server/src/tests/: __init__.py  test_ai_core.py  test_main.py
backend/fastmcp-server/: .gitignore  README.md  env.example  pyproject.toml
backend/fastmcp-server/src/fastmcp_server/: __init__.py  config.py  data_connectors.py  mcp_tools.py
backend/fastmcp-server/src/tests/: __init__.py  test_data_connectors.py
backend/tests/: conftest.py  test_main.py
frontend/: package.json
frontend/app/: app.css
frontend/app/Dashboard/components/: ActivityList.tsx  AnalyticsChart.tsx  DataTable.tsx  InfoCard.tsx  KeyMetric.tsx  index.ts
frontend/app/plugins/MasterLayoutPlugin/: index.ts
frontend/app/plugins/MasterLayoutPlugin/components/: ComponentWrapper.tsx  MasterLayout.tsx
frontend/app/plugins/MasterLayoutPlugin/hooks/: useChatManagement.ts  useContainerManagement.ts  useLayoutState.ts
frontend/app/plugins/MasterLayoutPlugin/interfaces/: index.ts
frontend/app/plugins/MasterLayoutPlugin/utils/: componentUtils.ts  storage.ts
frontend/app/routes/: home.tsx
